# Solving_QUBOs

./: .gitignore  README.md  introduction.ipynb  maxcut.ipynb  maxcut.py  problems.json  pyproject.toml  tsp.ipynb  tsp.py
3Satisfactory/: README.md  local.ipynb  sat.py
Maxcut/: local.ipynb  maxcut.ipynb  maxcut.py  quantum-approximate-optimization-algorithm.ipynb
TSP/: 06_examples_max_cut_and_tsp.ipynb  local.ipynb  qpu.ipynb  tsp.ipynb  tsp.py
utils/: __init__.py  qaoa.py  qubo.py  utils.py
