[tool.poetry]
name = "solving-qubos"
version = "0.1.0"
description = "Solving Quadratic Unconstrained Binary Optimization problems with quantum and classical solvers."
authors = ["Nathan Kittichaikoonkij"]
readme = "README.md"
packages = [{include = "utils"}]

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
