[tool.poetry]
name = "solving-qubos"
version = "0.1.0"
description = "Solving Quadratic Unconstrained Binary Optimization problems with quantum and classical solvers."
authors = ["Nathan Kittichaikoonkij"]
readme = "README.md"
packages = [{include = "utils"}]

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.1"
ipykernel = "^6.29.5"
qiskit = "^1.3.1"
minorminer = "^0.2.16"
amplify = "^1.3.1"
dwave-system = "^1.28.0"
python-dotenv = "^1.0.1"
qiskit-ibm-runtime = "^0.34.0"
rustworkx = "^0.15.1"
matplotlib = "^3.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
